<package format="2">
  <name>ardrone_autonomy</name>
  <version>1.4.1</version>
  <description>
    ardrone_autonomy is a ROS driver for Parrot AR-Drone 1.0 and 2.0 quadrocopters. This driver is based on official AR-Drone SDK version 2.0.1.
  </description>
  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ardrone_autonomy</url>
  <url type="bugtracker">https://github.com/AutonomyLab/ardrone_autonomy/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>binutils</build_depend>
  <build_depend>daemontools</build_depend>
  <build_depend>libsdl-dev</build_depend> <!-- Use libsdl-dev instead of sdl1.2-dev -->
  <build_depend>libgtk2.0-dev</build_depend> <!-- Use libgtk2.0-dev instead of gtk2 -->
  <build_depend>libxml2</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libiw-dev</build_depend>
  <build_depend>git</build_depend>

  <!-- ROS Driver -->
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend> <!-- Use tf2_ros instead of tf -->
  <build_depend>camera_info_manager</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend> <!-- Add nav_msgs -->
  <build_depend>roslint</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>

